# SmithWaterman

./: CMakeLists.txt  SmithWaterman.cpp
